tests/paczka1/fuzzy1/20179799.err
Error in line 4: hKfu S969 30,1
Error in line 3: A344 A822 43,9
Error in line 19: A344 S969 86,6
Error in line 22: A344 A10c 167,1
Error in line 9: SRwBqdaH3 A344 20,1
Error in line 21: A344 A102 55,5
Error in line 29: d4YdmxNu8bO A344 77,9
Error in line 32: d4YdmxNu8bO A102 99,2
